--- a/maxscale/manifests/sysbench/sysbench-mxs_cronjob.yaml
+++ b/maxscale/manifests/sysbench/sysbench-mxs_cronjob.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: sysbench
+  name: sysbench-mxs
 spec:
   concurrencyPolicy: Forbid
   schedule: "*/5 * * * *"
@@ -18,9 +18,9 @@ spec:
               - oltp_read_write 
               - --tables=10 
               - --table_size=1000000
-              - --mysql-host=mariadb-repl-primary.default.svc.cluster.local
+              - --mysql-host=maxscale-rw-split.default.svc.cluster.local
               - --mysql-port=3306
-              - --mysql-user=root
+              - --mysql-user=client
               - --mysql-password=MariaDB11!
               - --mysql-db=sbtest
               - --time=300 
