--- a/maxscale/manifests/sysbench/sysbench-prepare-mxs_job.yaml
+++ b/maxscale/manifests/sysbench/sysbench-prepare-mxs_job.yaml
@@ -1,10 +1,8 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: sysbench-prepare
+  name: sysbench-prepare-mxs
 spec:
-  concurrencyPolicy: Forbid
-  schedule: "*/5 * * * *"
   template:
     spec:
       restartPolicy: OnFailure
