--- a/hack/manifests/mariadb/mariadb_repl.yaml
+++ b/hack/manifests/mariadb/mariadb_repl.yaml
@@ -34,6 +34,7 @@ spec:
     binlog_format=row
     innodb_autoinc_lock_mode=2
     max_allowed_packet=256M
+    transaction_isolation=READ-COMMITTED
 
   metrics:
     enabled: true
